--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "id": "0338cdd3",
    "metadata": {},
    "outputs": [],
@@ -1546,9 +1546,581 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e3ff05a",
+   "metadata": {},
+   "source": [
+    "## Counters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22609d84",
+   "metadata": {},
+   "source": [
+    "A \"Counter\" turns a sequence of values into a defaultdict(int) - like object mapping keys to counts:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c0067c60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dfe0648b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = Counter([0,1,2,0]) # c is (bassically) {0:2, 1:1, 2:1}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0bef278",
+   "metadata": {},
+   "source": [
+    "This gives us a very simple way to solve our word_counts problem:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d1b2369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# recall, document is a list of words\n",
+    "word_counts = Counter(document)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "94d78569",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'H': 1,\n",
+       "         'i': 4,\n",
+       "         ' ': 4,\n",
+       "         't': 1,\n",
+       "         'h': 3,\n",
+       "         's': 3,\n",
+       "         'S': 2,\n",
+       "         'a': 4,\n",
+       "         'b': 2,\n",
+       "         'o': 1,\n",
+       "         'c': 1,\n",
+       "         'r': 2,\n",
+       "         'k': 1})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08aedd32",
+   "metadata": {},
+   "source": [
+    "A Counter instance has a \"most_common\" method that is frequently useful:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "29f4f9c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i 4\n",
+      "  4\n",
+      "a 4\n",
+      "h 3\n",
+      "s 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the 10 most common words and their counts\n",
+    "for word, count in word_counts.most_common(5):\n",
+    "    print(word, count)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a05df3d1",
+   "metadata": {},
+   "source": [
+    "## Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "343d8b77",
+   "metadata": {},
+   "source": [
+    "Another useful data structure is set, which represents a collection of distinct\n",
+    "elements. You can define a set by listing its elements between curly braces:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "166f8d04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primes_below_10 = {2, 3, 5, 7}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10a54ad4",
+   "metadata": {},
+   "source": [
+    "However, that doesn’t work for empty sets, as {} already means “empty\n",
+    "dict.” In that case you’ll need to use set() itself:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "be90c339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = set()\n",
+    "s.add(1) # s is now {1}\n",
+    "s.add(2) # s is now {1, 2}\n",
+    "s.add(2) # s is still {1, 2}\n",
+    "x = len(s) # equals 2\n",
+    "y = 2 in s # equals True\n",
+    "z = 3 in s # equals False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66139110",
+   "metadata": {},
+   "source": [
+    "We’ll use sets for two main reasons. The first is that \"in\" is a very fast\n",
+    "operation on sets. If we have a large collection of items that we want to use\n",
+    "for a membership test, a set is more appropriate than a list:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2be9f87",
+   "id": "35436a15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopwords_list = [\"a\", \"an\", \"at\"] + hundreds_of_other_words + [\"yet\", \"you\"]\n",
+    "\n",
+    "\"zip\" in stopwords_list # False, but have to check every element\n",
+    "\n",
+    "stopwords_set = set(stopwords_list)\n",
+    "\"zip\" in stopwords_set # very fast to check"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9653f887",
+   "metadata": {},
+   "source": [
+    "The second reason is to find the distinct items in a collection:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93c3aa9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_list = [1, 2, 3, 1, 2, 3]\n",
+    "num_items = len(item_list) # 6\n",
+    "item_set = set(item_list) # {1, 2, 3}\n",
+    "num_distinct_items = len(item_set) # 3\n",
+    "distinct_item_list = list(item_set) # [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8e296ea",
+   "metadata": {},
+   "source": [
+    "## Control Flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e1f72d49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 1 > 2:\n",
+    "    message = \"if only 1 were greater than two...\"\n",
+    "elif 1 > 3:\n",
+    "    message = \"elif stands for 'else if'\"\n",
+    "else:\n",
+    "    message = \"when all else fails use else (if you want to)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e770922",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can also write a ternary if-then-else on one line\n",
+    "\n",
+    "parity = \"even\" if x % 2 == 0 else \"odd\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed4105df",
+   "metadata": {},
+   "source": [
+    "Python has a \"while\" loop:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "812063b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is less than 10\n",
+      "1 is less than 10\n",
+      "2 is less than 10\n",
+      "3 is less than 10\n",
+      "4 is less than 10\n",
+      "5 is less than 10\n",
+      "6 is less than 10\n",
+      "7 is less than 10\n",
+      "8 is less than 10\n",
+      "9 is less than 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "while x < 10:\n",
+    "    print(f\"{x} is less than 10\")\n",
+    "    x += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ebe0a91",
+   "metadata": {},
+   "source": [
+    "although more often we’ll use \"for\" and \"in\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2575ac6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is less than 10\n",
+      "1 is less than 10\n",
+      "2 is less than 10\n",
+      "3 is less than 10\n",
+      "4 is less than 10\n",
+      "5 is less than 10\n",
+      "6 is less than 10\n",
+      "7 is less than 10\n",
+      "8 is less than 10\n",
+      "9 is less than 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range(10) is the numbers 0, 1, ..., 9\n",
+    "for x in range(10):\n",
+    "    print(f\"{x} is less than 10\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d93efa9",
+   "metadata": {},
+   "source": [
+    "If you need more complex logic, you can use \"continue\" and \"break\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3922f38e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(10):\n",
+    "    if x == 3:\n",
+    "        continue # go immediately to the next iteration\n",
+    "    if x == 5:\n",
+    "        break # quit the loop entirely\n",
+    "    print(x)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "093d95a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7b109bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ecf7f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa7d0ee2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "589063ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5fc1a35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "497ba940",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ac12930",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d41b4408",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2425f259",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01c94b06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e0ee41d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c2a93bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95bb0739",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c3da520",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f68e4e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff5ad46e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaeb8070",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f6fd2ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdbb3d8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50e0fe8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02dcc450",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa4638ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb617965",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31783283",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a0ef74e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "662e730c",
    "metadata": {},
    "outputs": [],
    "source": []
