--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e3ff05a",
+   "id": "ffad6753",
    "metadata": {},
    "source": [
     "## Counters"
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22609d84",
+   "id": "32a50ef9",
    "metadata": {},
    "source": [
     "A \"Counter\" turns a sequence of values into a defaultdict(int) - like object mapping keys to counts:"
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c0067c60",
+   "id": "c19c874b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dfe0648b",
+   "id": "0295e074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0bef278",
+   "id": "34a6f780",
    "metadata": {},
    "source": [
     "This gives us a very simple way to solve our word_counts problem:\n"
@@ -1592,7 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6d1b2369",
+   "id": "bc019dd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "94d78569",
+   "id": "e728ddbb",
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08aedd32",
+   "id": "f80507ab",
    "metadata": {},
    "source": [
     "A Counter instance has a \"most_common\" method that is frequently useful:"
@@ -1644,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "29f4f9c1",
+   "id": "1e54a928",
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a05df3d1",
+   "id": "f7d53e6a",
    "metadata": {},
    "source": [
     "## Sets"
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343d8b77",
+   "id": "e2542245",
    "metadata": {},
    "source": [
     "Another useful data structure is set, which represents a collection of distinct\n",
@@ -1685,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "166f8d04",
+   "id": "d63381a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10a54ad4",
+   "id": "e44b9b80",
    "metadata": {},
    "source": [
     "However, that doesn’t work for empty sets, as {} already means “empty\n",
@@ -1704,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "be90c339",
+   "id": "1a0ca749",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66139110",
+   "id": "6dd2ff07",
    "metadata": {},
    "source": [
     "We’ll use sets for two main reasons. The first is that \"in\" is a very fast\n",
@@ -1730,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35436a15",
+   "id": "b5c1d482",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9653f887",
+   "id": "743a21c9",
    "metadata": {},
    "source": [
     "The second reason is to find the distinct items in a collection:\n"
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c3aa9b",
+   "id": "9c84fe98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8e296ea",
+   "id": "1264ce0d",
    "metadata": {},
    "source": [
     "## Control Flow"
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e1f72d49",
+   "id": "a3b1152a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e770922",
+   "id": "6b53909c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed4105df",
+   "id": "20b46a10",
    "metadata": {},
    "source": [
     "Python has a \"while\" loop:"
@@ -1810,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "812063b6",
+   "id": "507b3a33",
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ebe0a91",
+   "id": "2aed1433",
    "metadata": {},
    "source": [
     "although more often we’ll use \"for\" and \"in\":"
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2575ac6f",
+   "id": "dbe949c4",
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d93efa9",
+   "id": "1751d669",
    "metadata": {},
    "source": [
     "If you need more complex logic, you can use \"continue\" and \"break\":"
@@ -1885,7 +1885,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3922f38e",
+   "id": "4b43e873",
    "metadata": {},
    "outputs": [
     {
@@ -1905,14 +1905,13 @@
     "        continue # go immediately to the next iteration\n",
     "    if x == 5:\n",
     "        break # quit the loop entirely\n",
-    "    print(x)\n",
-    "\n"
+    "    print(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "093d95a7",
+   "id": "d6a1fe94",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1920,7 +1919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b109bb",
+   "id": "5f3fd511",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1928,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ecf7f2f",
+   "id": "13d0bfb7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1936,7 +1935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa7d0ee2",
+   "id": "64b33cc2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1944,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "589063ef",
+   "id": "51e5b8b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1952,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5fc1a35",
+   "id": "f83b1134",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1960,7 +1959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "497ba940",
+   "id": "07fc974f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1968,7 +1967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac12930",
+   "id": "dd735da0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1976,7 +1975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41b4408",
+   "id": "6e3329b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1984,7 +1983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2425f259",
+   "id": "c21c8bf8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1992,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01c94b06",
+   "id": "9509d95a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2000,7 +1999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e0ee41d",
+   "id": "b570be7f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2008,7 +2007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c2a93bb",
+   "id": "162d7d00",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2016,7 +2015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bb0739",
+   "id": "da746e57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2024,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3da520",
+   "id": "bf44e155",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2032,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f68e4e5",
+   "id": "d92e5155",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2040,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5ad46e",
+   "id": "71ecf869",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2048,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaeb8070",
+   "id": "83b3bf18",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2056,7 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6fd2ba",
+   "id": "3bbed851",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2064,7 +2063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdbb3d8c",
+   "id": "f4678662",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2072,7 +2071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50e0fe8d",
+   "id": "92dfe064",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2080,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02dcc450",
+   "id": "62fd179b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2088,7 +2087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa4638ca",
+   "id": "5ba3fccf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2096,7 +2095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb617965",
+   "id": "7e5c2b2b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2104,7 +2103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31783283",
+   "id": "7472c4c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2112,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a0ef74e",
+   "id": "62093cb6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2120,7 +2119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "662e730c",
+   "id": "3e7c6f6c",
    "metadata": {},
    "outputs": [],
    "source": []
