--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "Many languages use curly braces to delimit blocks of code. Python uses\n",
-    "indentation:"
+    "<b>Indentation</b>:"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "0d5e0162",
    "metadata": {},
    "outputs": [
@@ -65,14 +65,13 @@
        "210"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "long_winded_computation = (1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 + 10 + 11 + 12 + 13 + 14 + 15 + 16 + 17 + 18 + 19 + 20)\n",
-    "\n",
     "long_winded_computation"
    ]
   },
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "ec8c5c18",
    "metadata": {},
    "outputs": [],
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "0b96bf32",
    "metadata": {},
    "outputs": [],
@@ -121,15 +120,15 @@
    "source": [
     "Certain features of Python are not loaded by default. These include both\n",
     "features that are included as part of the language as well as third-party\n",
-    "features that you download yourself. In order to use these features, you’ll\n",
+    "features that we might need to download as needed. In order to use these features, we’ll\n",
     "need to import the modules that contain them.\n",
     "\n",
-    "One approach is to simply import the module itself:\n"
+    "One approach is to simply import the module itself:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "c6f9134c",
    "metadata": {},
    "outputs": [],
@@ -144,9 +143,61 @@
    "id": "1ea78212",
    "metadata": {},
    "source": [
-    "Here, re is the module containing functions and constants for working with\n",
-    "regular expressions. After this type of import you must prefix those\n",
-    "functions with re. in order to access them.\n"
+    "Here, <b>re</b> is the module containing functions and constants for working with\n",
+    "<b>Regular Expressions</b>. After this type of import you must prefix those\n",
+    "functions with <b>re</b>. in order to access them.\n",
+    "\n",
+    "<b>Regular Expressions</b> are powerful tools for pattern matching and manipulation of strings. The **re** module allows you to work with regular expressions in Python by providing functions for pattern matching, searching, and manipulation of strings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2251c72",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    my_regex = re.compile(\"[0-9]+\", re.I)\n",
+    "\n",
+    "Here, you are creating a compiled regular expression object named my_regex. The **re.compile()** function is used to compile a regular expression pattern into a regex object. The pattern you are compiling is \"[0-9]+\", which can be broken down as follows:\n",
+    "\n",
+    "    --> [0-9]: This part of the pattern is a character class that matches any digit from 0 to 9.\n",
+    "    --> \"+\": This is a quantifier that matches one or more occurrences of the preceding element (in this case, digits).\n",
+    "\n",
+    "So, the pattern [0-9]+ matches one or more consecutive digits in a string.\n",
+    "\n",
+    "The second argument to **re.compile()** is **re.I**, which stands for **\"ignore case.\"** This is a flag that makes the regular expression case-insensitive. With this flag, the pattern will match both uppercase and lowercase letters.\n",
+    "\n",
+    "As a result, the compiled regular expression object my_regex can be used for various operations such as searching, matching, and replacing in strings. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ca8daee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match found: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = my_regex.search(\"The number is 42.\")\n",
+    "if result:\n",
+    "    print(\"Match found:\", result.group())\n",
+    "else:\n",
+    "    print(\"No match found.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f59ce79",
+   "metadata": {},
+   "source": [
+    "In this example, the **search** method is used to find the first occurrence of the pattern in the given string, and **result.group()** retrieves the matched substring."
    ]
   },
   {
@@ -154,19 +205,39 @@
    "id": "236a3925",
    "metadata": {},
    "source": [
-    "If you already had a different re in your code, you could use an alias:"
+    "If we already had a different **re** in our code, we could use an alias:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "d9cc082c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import re as regex\n",
-    "\n",
     "my_regex = regex.compile(\"[0-9]+\", regex.I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ee41179c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "re.compile(r'[0-9]+', re.IGNORECASE|re.UNICODE)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_regex"
    ]
   },
   {
@@ -174,9 +245,7 @@
    "id": "2a0bc7fd",
    "metadata": {},
    "source": [
-    "You might also do this if your module has an unwieldy name or if you’re\n",
-    "going to be typing it a lot. For example, a standard convention when\n",
-    "visualizing data with matplotlib is:\n"
+    "We can use shorter version of names too for easy writting."
    ]
   },
   {
@@ -195,20 +264,20 @@
    "id": "2006f624",
    "metadata": {},
    "source": [
-    "If you need a few specific values from a module, you can import them\n",
+    "If we need a few specific values from a module, we can import them\n",
     "explicitly and use them without qualification:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "50d51ded",
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict, Counter\n",
     "lookup = defaultdict(int)\n",
-    "my_counter = Counter()\n"
+    "my_counter = Counter()"
    ]
   },
   {
@@ -216,21 +285,29 @@
    "id": "0cd31cb3",
    "metadata": {},
    "source": [
-    "If you were a bad person, you could import the entire contents of a module\n",
-    "into your namespace, which might inadvertently overwrite variables you’ve\n",
+    "If we were a bad person, we could import the entire contents of a module\n",
+    "into your namespace, which might inadvertently overwrite variables we’ve\n",
     "already defined:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "fc46edb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function match at 0x0000012880EF3560>\n"
+     ]
+    }
+   ],
    "source": [
     "match = 10\n",
     "from re import * # uh oh, re has a match function\n",
-    "print(match) # \"<function match at 0x10281e6a8>\""
+    "print(match)"
    ]
   },
   {
@@ -247,22 +324,41 @@
    "metadata": {},
    "source": [
     "A function is a rule for taking zero or more inputs and returning a\n",
-    "corresponding output. In Python, we typically define functions using def:"
+    "corresponding output. In Python, we typically define functions using **def:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "7397202c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def double(x):\n",
-    "\"\"\"\n",
-    "This is where you put an optional docstring that explains what the\n",
-    "function does. For example, this function multiplies its input by 2.\n",
-    "\"\"\"\n",
-    "return x * 2"
+    "    \"\"\"\n",
+    "        This is where you put an optional docstring that explains what the\n",
+    "        function does. For example, this function multiplies its input by 2.\n",
+    "    \"\"\"\n",
+    "    return x * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "61ec6deb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = double(5)\n",
+    "print(result)  # Output: 10"
    ]
   },
   {
