--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -515,7 +515,6 @@
    "outputs": [],
    "source": [
     "# Example of Strings\n",
-    "\n",
     "single_quoted_string = 'data science'\n",
     "double_quoted_string = \"data science\" "
    ]
@@ -540,7 +539,6 @@
    "source": [
     "# Python uses backslashes to encode special characters. \n",
     "# For example:\n",
-    "\n",
     "tab_string = \"\\t\" # represents the tab character is 1\n",
     "len(tab_string)"
    ]
@@ -568,9 +566,9 @@
    "id": "b7f5a3aa",
    "metadata": {},
    "source": [
-    "If you want backslashes as backslashes (which you might in Windows\n",
-    "directory names or in regular expressions), you can create raw strings using\n",
-    "r\"\":"
+    "If we want backslashes as backslashes (which we might in Windows\n",
+    "directory names or in regular expressions), we can create raw strings using\n",
+    "r\" \":"
    ]
   },
   {
