--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2003,84 +2003,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6a1fe94",
+   "cell_type": "markdown",
+   "id": "c94235ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Truthiness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a7e53a3",
+   "metadata": {},
+   "source": [
+    "Booleans in Python work as in most other languages, except that they’re\n",
+    "capitalized:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f3fd511",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "13d0bfb7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_is_less_than_two = 1 < 2 \n",
+    "one_is_less_than_two"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64b33cc2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "51e5b8b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "true_equals_false = True == False\n",
+    "true_equals_false"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f83b1134",
+   "cell_type": "markdown",
+   "id": "4824cb92",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Python uses the value **None** to indicate a nonexistent value. It is similar to\n",
+    "other languages’ **null**:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "07fc974f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = None\n",
+    "\n",
+    "assert x == None, \"this is the not the Pythonic way to check for None\"\n",
+    "assert x is None, \"this is the Pythonic way to check for None\""
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd735da0",
+   "cell_type": "markdown",
+   "id": "516e03bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Python lets us use any value where it expects a Boolean. The following\n",
+    "are all “falsy”:\n",
+    "\n",
+    "     --> False\n",
+    "     --> None\n",
+    "     --> [] (an empty list)\n",
+    "     --> {} (an empty dict)\n",
+    "     --> \"\"\n",
+    "     --> set()\n",
+    "     --> 0\n",
+    "     --> 0.0"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e3329b2",
+   "cell_type": "markdown",
+   "id": "19c054a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c21c8bf8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Pretty much anything else gets treated as **True**. This allows you to easily\n",
+    "use **if** statements to test for empty lists, empty strings, empty dictionaries,\n",
+    "and so on. It also sometimes causes tricky bugs if you’re not expecting this\n",
+    "behavior:"
+   ]
   },
   {
    "cell_type": "code",
@@ -2088,15 +2120,21 @@
    "id": "9509d95a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = some_function_that_returns_a_string()\n",
+    "if s:\n",
+    "    first_char = s[0]\n",
+    "else:\n",
+    "    first_char = \"\""
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b570be7f",
+   "cell_type": "markdown",
+   "id": "9b76b007",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A shorter way of doing the same is:\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -2104,15 +2142,18 @@
    "id": "162d7d00",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "first_char = s and s[0]"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da746e57",
+   "cell_type": "markdown",
+   "id": "c4cd6afb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "since and returns its second value when the first is **“truthy,”** and the first\n",
+    "value when it’s not. Similarly, if x is either a number or possibly **None**:"
+   ]
   },
   {
    "cell_type": "code",
@@ -2120,15 +2161,17 @@
    "id": "bf44e155",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "safe_x = x or 0"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d92e5155",
+   "cell_type": "markdown",
+   "id": "7b6d0d52",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "is definitely a number, although:"
+   ]
   },
   {
    "cell_type": "code",
@@ -2136,7 +2179,9 @@
    "id": "71ecf869",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "safe_x = x if x is not None else 0\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -2144,23 +2189,44 @@
    "id": "83b3bf18",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "is possibly more readable."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bbed851",
+   "cell_type": "markdown",
+   "id": "a7cc1c8a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Python has an all function, which takes an iterable and returns True\n",
+    "precisely when every element is truthy, and an any function, which returns\n",
+    "True when at least one element is truthy:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f4678662",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all([True, 1, {3}]) # True, all are truthy\n",
+    "all([True, 1, {}]) # False, {} is falsy\n",
+    "any([True, 1, {}]) # True, True is truthy\n",
+    "all([]) # True, no falsy elements in the list\n",
+    "any([]) # False, no truthy elements in the list"
+   ]
   },
   {
    "cell_type": "code",
