--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c94235ee",
+   "id": "c6c18da0",
    "metadata": {},
    "source": [
     "## Truthiness"
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a7e53a3",
+   "id": "6a3e2296",
    "metadata": {},
    "source": [
     "Booleans in Python work as in most other languages, except that they’re\n",
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4824cb92",
+   "id": "ccbb75c7",
    "metadata": {},
    "source": [
     "Python uses the value **None** to indicate a nonexistent value. It is similar to\n",
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "516e03bc",
+   "id": "2bf8eef7",
    "metadata": {},
    "source": [
     "Python lets us use any value where it expects a Boolean. The following\n",
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c054a0",
+   "id": "23900121",
    "metadata": {},
    "source": [
     "Pretty much anything else gets treated as **True**. This allows you to easily\n",
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b76b007",
+   "id": "646f7758",
    "metadata": {},
    "source": [
     "A shorter way of doing the same is:\n"
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4cd6afb",
+   "id": "2510e469",
    "metadata": {},
    "source": [
     "since and returns its second value when the first is **“truthy,”** and the first\n",
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b6d0d52",
+   "id": "3036fc0d",
    "metadata": {},
    "source": [
     "is definitely a number, although:"
@@ -2195,7 +2195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7cc1c8a",
+   "id": "f8088415",
    "metadata": {},
    "source": [
     "Python has an all function, which takes an iterable and returns True\n",
@@ -2229,12 +2229,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92dfe064",
+   "cell_type": "markdown",
+   "id": "9c0404e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Sorting"
+   ]
   },
   {
    "cell_type": "code",
@@ -2242,15 +2242,23 @@
    "id": "62fd179b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Every Python list has a sort method that sorts it in place. If you don’t want\n",
+    "to mess up your list, you can use the sorted function, which returns a new\n",
+    "list:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ba3fccf",
+   "id": "67df1f39",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = [4, 1, 2, 3]\n",
+    "y = sorted(x) # y is [1, 2, 3, 4], x is unchanged\n",
+    "x.sort() # now x is [1, 2, 3, 4]\n"
+   ]
   },
   {
    "cell_type": "code",
